--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -23,9 +23,9 @@
         <change>(Inoffizielle) Mebis App hinzugefügt</change>
         <change>Corona Live-Ticker für den LK Roth hinzugefügt</change>
         <change>Durchsuchbare Einstellungen</change>
-        <change>Vorschlägeliste im Stundenplan editierbar</change>
-        <change>Manuelle Entsperrung hinzugefügt</change>
+        <change>Manuelles Entsperren hinzugefügt</change>
         <change>Samsung DeX Kompatibilität</change>
+        <change>Vorschlägeliste im Stundenplan editierbar</change>
         <change>Kleinere Design-Änderungen</change>
         <change>Großer Bugfix im Vertretungsplan</change>
     </release>
