--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -70,6 +70,11 @@
 
     <color name="white">#FFFFFF</color>
 
+    <!-- Corona Lights -->
+    <color name="corona_light_green">#388E3C</color>
+    <color name="corona_light_yellow">#FFC107</color>
+    <color name="corona_light_red">#F44336</color>
+    <color name="corona_light_deep_red">#C62828</color>
 
     <color name="religion">#9C27B0</color>
     <color name="physics">#9C27B0</color>
