--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -18,6 +18,12 @@
 
 <changelog>
     <release
+        version="1.2.3"
+        versioncode="123">
+        <change>Kleinere Designänderungen</change>
+        <change>Bugfixes</change>
+    </release>
+    <release
         version="1.2.2"
         versioncode="122">
         <change>(Inoffizielle) Mebis App hinzugefügt</change>
