--- a/app/src/main/res/layout/content_sign_in.xml
+++ b/app/src/main/res/layout/content_sign_in.xml
@@ -67,11 +67,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
+                android:layout_marginEnd="15dp"
                 android:checked="true"
                 android:gravity="center"
                 android:text="@string/automatic_update_check"
-                android:textColor="?android:attr/textColorSecondary"
-                android:layout_marginEnd="15dp" />
+                android:textColor="?android:attr/textColorSecondary" />
 
             <Button
                 android:id="@+id/signin_url_settings_button"
@@ -84,6 +84,7 @@
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_margin="8dp"
             android:layout_marginTop="35dp"
             android:gravity="center"
             android:text="@string/login_description"
