--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -20,6 +20,7 @@
     <release
         version="1.2.3"
         versioncode="123">
+        <change>MS Teams Button hinzugefügt</change>
         <change>Kleinere Designänderungen</change>
         <change>Bugfixes</change>
     </release>
