--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -18,6 +18,12 @@
 
 <changelog>
     <release
+        version="1.2.4"
+        versioncode="124">
+        <change>Orange Färbung im Corona Live-Ticker</change>
+        <change>Bugfixes</change>
+    </release>
+    <release
         version="1.2.3"
         versioncode="123">
         <change>MS Teams Button hinzugefügt</change>
