add rss feed of school office

--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -20,6 +20,7 @@
     <release
         version="1.2.5"
         versioncode="125">
+        <change>RSS-Feed des Kultusministeriums hinzugefügt</change>
         <change>Importieren der Ferien hinzugefügt</change>
     </release>
     <release
