--- a/app/src/main/res/menu/activity_drawer_main.xml
+++ b/app/src/main/res/menu/activity_drawer_main.xml
@@ -126,8 +126,7 @@
                 <item
                     android:id="@+id/nav_call_office"
                     android:icon="@drawable/ic_call_black_24dp"
-                    android:title="@string/menu_call_office"
-                    android:visible="false" />
+                    android:title="@string/menu_call_office" />
                 <item
                     android:id="@+id/nav_news"
                     android:icon="@drawable/ic_news"
@@ -160,8 +159,8 @@
     <!--    <item android:title="@string/menu_category_settings">-->
     <!--        <menu>-->
     <group
-        android:checkableBehavior="none"
-        android:id="@+id/settings_group">
+        android:id="@+id/settings_group"
+        android:checkableBehavior="none">
         <item
             android:id="@+id/nav_imprint"
             android:icon="@drawable/ic_help_outline_black_24dp"
