--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -22,6 +22,7 @@
         versioncode="125">
         <change>RSS-Feed des Kultusministeriums hinzugefügt</change>
         <change>Importieren der Ferien hinzugefügt</change>
+        <change>Kleinere Änderungen</change>
     </release>
     <release
         version="1.2.4"
