--- a/app/src/main/res/layout/substitution_title_new.xml
+++ b/app/src/main/res/layout/substitution_title_new.xml
@@ -20,37 +20,45 @@
 
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
+    android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:orientation="vertical">
 
-    <LinearLayout
+    <androidx.cardview.widget.CardView
         android:id="@+id/substitution_new_background"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="6dp"
-        android:layout_marginEnd="6dp"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="4dp"
+        android:layout_marginEnd="8dp"
         android:layout_marginBottom="6dp"
-        android:layout_marginTop="3dp"
-        android:background="@color/colorPrimary"
-        android:orientation="vertical"
-        android:padding="@dimen/title_new_padding">
+        app:cardBackgroundColor="@color/colorPrimary">
 
-        <TextView
-            android:id="@+id/substitution_new_title"
+        <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="#FFE0E0E0"
-            android:textSize="36sp"
-            android:textStyle="bold" />
+            android:orientation="vertical"
+            android:padding="@dimen/title_new_padding">
 
-        <TextView
-            android:id="@+id/substitution_new_title_desc"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center"
-            android:textColor="#FFE0E0E0"
-            android:textSize="24sp" />
-    </LinearLayout>
+            <TextView
+                android:id="@+id/substitution_new_title"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#FFE0E0E0"
+                android:textSize="36sp"
+                android:textStyle="bold" />
+
+            <TextView
+                android:id="@+id/substitution_new_title_desc"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:textColor="#FFE0E0E0"
+                android:textSize="24sp" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
 
