--- a/app/src/main/res/menu/timetable_main.xml
+++ b/app/src/main/res/menu/timetable_main.xml
@@ -19,20 +19,20 @@
         android:orderInCategory="100"
         android:title="@string/integrate_substitution_in_timetable_on"
         app:showAsAction="ifRoom" />
-    <item
-        android:id="@+id/action_timetable_backup"
-        android:orderInCategory="100"
-        android:title="@string/menu_backup"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_timetable_restore"
-        android:orderInCategory="100"
-        android:title="@string/menu_restore"
-        app:showAsAction="never" />
-    <item
-        android:id="@+id/action_timetable_remove_all"
-        android:orderInCategory="100"
-        android:title="@string/remove_all_subjects"
-        app:showAsAction="never" />
+    <!--    <item-->
+    <!--        android:id="@+id/action_timetable_backup"-->
+    <!--        android:orderInCategory="100"-->
+    <!--        android:title="@string/menu_backup"-->
+    <!--        app:showAsAction="never" />-->
+    <!--    <item-->
+    <!--        android:id="@+id/action_timetable_restore"-->
+    <!--        android:orderInCategory="100"-->
+    <!--        android:title="@string/menu_restore"-->
+    <!--        app:showAsAction="never" />-->
+    <!--    <item-->
+    <!--        android:id="@+id/action_timetable_remove_all"-->
+    <!--        android:orderInCategory="100"-->
+    <!--        android:title="@string/remove_all_subjects"-->
+    <!--        app:showAsAction="never" />-->
 
 </menu>
