disable school podcast by default

--- a/app/src/main/res/xml/preferences_hide_menu_items.xml
+++ b/app/src/main/res/xml/preferences_hide_menu_items.xml
@@ -87,7 +87,7 @@
         android:title="@string/menu_shop"
         app:iconSpaceReserved="false" />
     <SwitchPreference
-        android:defaultValue="true"
+        android:defaultValue="false"
         android:key="menu_podcast"
         android:title="@string/menu_podcast"
         app:iconSpaceReserved="false" />
