--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -18,6 +18,12 @@
 
 <changelog>
     <release
+        version="1.4.4"
+        versioncode="144">
+        <change>Corona-Daten entfernt</change>
+        <change>Bugfixes</change>
+    </release>
+    <release
         version="1.4.3"
         versioncode="143">
         <change>Neues Logo</change>
