--- a/app/src/main/res/xml/changelog_master.xml
+++ b/app/src/main/res/xml/changelog_master.xml
@@ -21,7 +21,7 @@
         version="1.4.4"
         versioncode="144">
         <change>Corona-Daten entfernt</change>
-        <change>Bugfixes</change>
+        <change>Bugfixes (Danke für die Geduld)</change>
     </release>
     <release
         version="1.4.3"
